[gd_scene load_steps=31 format=3 uid="uid://dk6a56e3n3mbc"]

[ext_resource type="PackedScene" uid="uid://cupi7qpibwqb1" path="res://Scenes/Virtual/actor.tscn" id="1_xtkr7"]
[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="2_5gwpl"]
[ext_resource type="Texture2D" uid="uid://b7g0i6jsy4ic5" path="res://Assets/Player/p_attack/Attack 1 01.png" id="3_tmgo4"]
[ext_resource type="Texture2D" uid="uid://vpcnq2s0fbqi" path="res://Assets/Player/p_attack/Attack 1 02.png" id="4_7isfx"]
[ext_resource type="Texture2D" uid="uid://b2etryqltgd4x" path="res://Assets/Player/p_attack/Attack 1 03.png" id="5_4kn2l"]
[ext_resource type="Texture2D" uid="uid://cv4moerkih7ew" path="res://Assets/Player/p_idle/Idle Sword 01.png" id="6_krf1c"]
[ext_resource type="Texture2D" uid="uid://conenwmy5ffqd" path="res://Assets/Player/p_idle/Idle Sword 02.png" id="7_uuo7l"]
[ext_resource type="Texture2D" uid="uid://4w38nq82xi77" path="res://Assets/Player/p_fall.png" id="8_41rss"]
[ext_resource type="Texture2D" uid="uid://fwr1g5mivh" path="res://Assets/Player/p_idle/Idle Sword 03.png" id="8_yi1e7"]
[ext_resource type="Texture2D" uid="uid://dxfkdquiwud0k" path="res://Assets/Player/p_idle/Idle Sword 04.png" id="9_h8eqv"]
[ext_resource type="Texture2D" uid="uid://4nixvr18gi8b" path="res://Assets/Player/p_idle/Idle Sword 05.png" id="10_8in13"]
[ext_resource type="Texture2D" uid="uid://cghbr6t35xfcy" path="res://Assets/Player/p_hurt/Hit Sword 01.png" id="12_bvnhc"]
[ext_resource type="Texture2D" uid="uid://byn640luw2rcm" path="res://Assets/Player/p_hurt/Hit Sword 02.png" id="13_16yjt"]
[ext_resource type="Texture2D" uid="uid://bip1i2w03uef7" path="res://Assets/Player/p_hurt/Hit Sword 03.png" id="14_o2j67"]
[ext_resource type="Texture2D" uid="uid://bek0q1u02ej0p" path="res://Assets/Player/p_hurt/Hit Sword 04.png" id="15_fues5"]
[ext_resource type="Texture2D" uid="uid://d045y6mqgruqx" path="res://Assets/Player/p_jump/Jump Sword 01.png" id="16_c0yo5"]
[ext_resource type="Texture2D" uid="uid://b13ajmrupd2tv" path="res://Assets/Player/p_jump/Jump Sword 02.png" id="17_qngnj"]
[ext_resource type="Texture2D" uid="uid://dxn3r18igdhnn" path="res://Assets/Player/p_jump/Jump Sword 03.png" id="18_3hj2a"]
[ext_resource type="Texture2D" uid="uid://cu7rpaorw8lmx" path="res://Assets/Player/p_run/Run Sword 02.png" id="19_1pv8x"]
[ext_resource type="Texture2D" uid="uid://bcg8qhx0uuobm" path="res://Assets/Player/p_run/Run Sword 03.png" id="20_hsscw"]
[ext_resource type="Texture2D" uid="uid://crytucqtb72sa" path="res://Assets/Player/p_run/Run Sword 04.png" id="21_a5fqn"]
[ext_resource type="Texture2D" uid="uid://cuy3hej0m8fmh" path="res://Assets/Player/p_run/Run Sword 05.png" id="22_3xt32"]
[ext_resource type="Texture2D" uid="uid://cjghijuu1of3n" path="res://Assets/Player/p_run/Run Sword 06.png" id="23_wwjj4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbkd8"]
size = Vector2(18, 27)

[sub_resource type="SpriteFrames" id="SpriteFrames_dkb7f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_tmgo4")
}, {
"duration": 1.0,
"texture": ExtResource("4_7isfx")
}, {
"duration": 1.0,
"texture": ExtResource("5_4kn2l")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_krf1c")
}, {
"duration": 1.0,
"texture": ExtResource("7_uuo7l")
}, {
"duration": 1.0,
"texture": ExtResource("8_yi1e7")
}, {
"duration": 1.0,
"texture": ExtResource("9_h8eqv")
}, {
"duration": 1.0,
"texture": ExtResource("10_8in13")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_41rss")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_bvnhc")
}, {
"duration": 1.0,
"texture": ExtResource("13_16yjt")
}, {
"duration": 1.0,
"texture": ExtResource("14_o2j67")
}, {
"duration": 1.0,
"texture": ExtResource("15_fues5")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_c0yo5")
}, {
"duration": 1.0,
"texture": ExtResource("17_qngnj")
}, {
"duration": 1.0,
"texture": ExtResource("18_3hj2a")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_1pv8x")
}, {
"duration": 1.0,
"texture": ExtResource("20_hsscw")
}, {
"duration": 1.0,
"texture": ExtResource("21_a5fqn")
}, {
"duration": 1.0,
"texture": ExtResource("22_3xt32")
}, {
"duration": 1.0,
"texture": ExtResource("23_wwjj4")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xvbrh"]
size = Vector2(15, 9)

[sub_resource type="Animation" id="Animation_a6m7d"]
resource_name = "Attack"

[sub_resource type="Animation" id="Animation_xj5sw"]
resource_name = "Die"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a07yp"]
_data = {
"Attack": SubResource("Animation_a6m7d"),
"Die": SubResource("Animation_xj5sw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h672d"]
size = Vector2(22, 12)

[node name="Player" groups=["player"] instance=ExtResource("1_xtkr7")]
collision_layer = 10
collision_mask = 15
script = ExtResource("2_5gwpl")
coyote_time_frames = 6
jump_time_frames = 6
friction = 0.428
acceleration = 0.715
speed = 220.0
jump_height = 140

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_jbkd8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_dkb7f")
animation = &"attack"
autoplay = "default"

[node name="Camera2D" type="Camera2D" parent="." index="2"]
offset = Vector2(0, -50)
zoom = Vector2(2.3, 2.3)
limit_bottom = 200
limit_smoothed = true
drag_horizontal_enabled = true

[node name="Timers" type="Node" parent="." index="3"]

[node name="CoyoteTimer" type="Timer" parent="Timers" index="0"]
unique_name_in_owner = true
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="Timers" index="1"]
unique_name_in_owner = true
one_shot = true

[node name="JumpHoldTimer" type="Timer" parent="Timers" index="2"]
unique_name_in_owner = true

[node name="Hitbox" parent="." index="4"]
collision_layer = 10
collision_mask = 6

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0.5, 6.5)
shape = SubResource("RectangleShape2D_xvbrh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
libraries = {
"": SubResource("AnimationLibrary_a07yp")
}

[node name="Attack" type="Area2D" parent="." index="6" groups=["sword"]]
collision_layer = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack" index="0"]
position = Vector2(21, 5)
shape = SubResource("RectangleShape2D_h672d")
disabled = true

[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timers/CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
